# SteamBotPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SteamBot.sln  SteamBot.userprefs
BotManager/: BotManager.cproj  consoleCmdHandler.cpp  consoleCmdHandler.h  consoleWindow.cpp  consoleWindow.h  logger.cpp  logger.h  main.cpp
