cmake_minimum_required(VERSION 2.8)
project(SteamBot)
cmake_policy(SET CMP0015 NEW)
find_package(PkgConfig REQUIRED)
find_package(Boost 1.54.0 COMPONENTS system filesystem REQUIRED)
set (ISDEBUG FALSE CACHE BOOL "Build debug build?")
set (ISSERVER FALSE CACHE BOOL "Build server only binaries?")
if (ISDEBUG)
  set(outDir Bin/Debug)
  set(definitionsSub "${GTK3_CFLAGS_OTHER} -Wall -g -O -std=c++11 -DDebug")
else()
  set(outDir Bin/Release)
  set(definitionsSub "${GTK3_CFLAGS_OTHER} -Wall -g -O -std=c++11")
endif()
if (ISSERVER)
  message("Servermode Engaged!")
  set(definitions "${definitionsSub} -DServerMode")
else()
  set(definitions "${definitionsSub}")
endif()
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
set(mainDir ${SteamBot_SOURCE_DIR}/BotManager)
set(sources ${mainDir}/main.cpp ${mainDir}/logger.cpp ${mainDir}/consoleWindow.cpp ${mainDir}/consoleCmdHandler.cpp)
set(libs ${GTK3_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})
include_directories(${mainDir})
include_directories(${GTK3_INCLUDE_DIRS})
include_directories(${mainDir}/consoleApp)
link_directories(${GTK3_LIBRARY_DIRS})
link_directories(${mainDir})
link_directories(${mainDir}/consoleApp)
add_definitions(${definitions})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${outDir})
add_executable(BotManager ${sources})
target_link_libraries(BotManager ${libs})
